Thu May  3 12:00:13 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/included.idl:
        * tests/IDL_Test/including.idl:

          Fixed fuzz errors.

Thu May  3 08:34:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvsc/orbsvcs/Property/CosPropertyService_i.cpp:
          Duh! Also correct the use -> to . of this!

Thu May  3 08:23:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvsc/orbsvcs/Property/CosPropertyService_i.cpp:
          Fix memory leak in CosPropertyService due to incorrect heap allocation of 
          CosPropertyService::MultipleExceptions in TAO_PropertySet::define_properties()
          should have been stack based like the other existing uses in this file.

Wed May  2 17:00:56 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_utils.cpp(can_be_redefined): Changes to accept
          as legal IDL the same enum values in a different enum type
          defined inside an interface derived from the one containing
          the original enum values, all in reopenings of nested modules
          in different IDL files. Thanks to Markus Manck <Markus.Manck@Philotech.de>
          for reporting the bug and sending in an example in IDL.

        * tests/IDL_Test/indluded.idl:
        * tests/IDL_Test/including.idl:
          
          Added test case based on above example IDL.

Sun Apr 15 12:36:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp:
          Fixed coverity error

Fri Apr 06 09:03:19 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.1 released.

Tue Apr  3 16:52:21 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any.cpp:

          Removed strdelete of string and wstring buffers returned in Any extraction
          to std::string and std::wstring, since the Any still owns them and will